feat: implement add user favorite team
