# backend/src/app/models/User.js
@@ -4,4 +4,10 @@ export const User = mongoose.model("User", {
   username: String,
   email: String,
   password: String,
+  favorite_teams: [
+    {
+      team_id: String,
+      name: String
+    },
+  ],
 });
